<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_margin="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="140dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:src="@android:drawable/sym_def_app_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="10dp"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/FirstName"
                            android:textColor="@color/black_light"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/AccountName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:hint="@string/FirstName"
                            android:layout_weight="1"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/LastName"
                            android:textColor="@color/black_light"
                            android:textSize="20sp"
                            android:layout_weight="1" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/AccountLastName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:hint="@string/LastName"
                            android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/AccountMoney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/SampleText"
                    android:textColor="@color/black_light"
                    android:backgroundTint="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/AccountLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/LogOutText"
        />
</LinearLayout>